Add auto-generated http clients with swagger pt.2
