# product-api/swagger.yaml
@@ -76,7 +76,7 @@ paths:
       operationId: createProduct
       parameters:
       - description: |-
-          Product data structure to Update or Create.
+          Product data structure tos Update or Create.
           Note: the id field is ignored by update and create operations
         in: body
         name: Body
@@ -97,20 +97,13 @@ paths:
       operationId: updateProduct
       parameters:
       - description: |-
-          Product data structure to Update or Create.
+          Product data structure tos Update or Create.
           Note: the id field is ignored by update and create operations
         in: body
         name: Body
         required: true
         schema:
           $ref: '#/definitions/Product'
-      - description: The id of the product for which the operation relates
-        format: int64
-        in: path
-        name: id
-        required: true
-        type: integer
-        x-go-name: ID
       responses:
         "201":
           $ref: '#/responses/noContentResponse'
@@ -123,7 +116,15 @@ paths:
   /products/{id}:
     delete:
       description: Deletes the product with the given id
-      operationId: deleteProducts
+      operationId: deleteProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
       responses:
         "201":
           $ref: '#/responses/noContent'
@@ -135,7 +136,15 @@ paths:
       - products
     get:
       description: Return a list of products from the database
-      operationId: listSingle
+      operationId: listSingleProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
       responses:
         "200":
           $ref: '#/responses/productResponse'
@@ -154,7 +163,8 @@ responses:
     description: Validation errors defined as an array of strings
     schema:
       $ref: '#/definitions/ValidationError'
-  noContent: {}
+  noContent:
+    description: No content found for the prody=uct
   noContentResponse:
     description: No content is returned by this API endpoint
   productResponse:
